<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/linlaylist"
    xmlns:android="http://schemas.android.com/apk/res/android" >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/StackOfGeneralInformation"
           android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/Username"
                   android:minHeight="50dp"
                   android:text="@string/defaultUser"
                   android:textSize="35dp"
                   android:textStyle="bold"/>

               <TextView

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/info_about_app"
                   android:minHeight="175dp"
                   android:text="@string/error1"
                   android:textSize="25dp"
                   />
       </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/stackOfButtons"
            android:layout_weight="2"
            android:layout_below="@id/StackOfGeneralInformation"
            android:baselineAligned="false"
            >

                <Button
                    android:id="@+id/software"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:text="@string/software"
                    android:backgroundTint="@color/ColMAIN3"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hardware"
                    android:id="@+id/hardware"
                    android:backgroundTint="@color/ColMAIN"/>

                <Button
                    android:id="@+id/genverbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general_verbs"
                    android:backgroundTint="@color/ColMAIN3"/>

                <Button
                    android:id="@+id/internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/internet"
                    android:backgroundTint="@color/ColMAIN"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_below="@id/stackOfButtons"
            android:id="@+id/ExitFromListOfModulsBTN">
                <Button
                    android:id="@+id/exitFromListOfModuls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/ColMAIN2"
                    android:text="@string/UserExit" />
        </LinearLayout>



</RelativeLayout>