<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ColMAIN"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/InputName"
        android:textSize="30sp"
        android:id="@+id/NewUsername"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/UpdateUser"
            android:backgroundTint="@color/ColMAIN3"
            android:id="@+id/btn_saveUser"/>
        <Button
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="@color/ColMAIN2"
            android:id="@+id/btn_deleteUser"/>
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выбрать"
        android:backgroundTint="@color/ColMAIN"
        android:id="@+id/btn_chosen_one"/>

</LinearLayout>