<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textStyle="bold"
        android:id="@+id/textView_ModuleNameTest"
        android:text="@string/moduleName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColMAIN"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/textView_numOfQuestion"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/QuestionNumber"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_exitFromTest"
            android:backgroundTint="@color/ColMAIN2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="3"

            android:text="@string/backTo" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textSize="20sp"
        android:textAlignment="center"
        android:id="@+id/textView_question"/>

    <TextView
        android:id="@+id/textView_wordForQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="RABBIT"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ColMAIN"
            android:layout_weight="2"
            android:minHeight="120sp"
            android:id="@+id/btn_answer1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="120sp"
            android:backgroundTint="@color/ColMAIN"
            android:id="@+id/btn_answer2"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="120sp"
            android:backgroundTint="@color/ColMAIN"
            android:id="@+id/btn_answer3"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:minHeight="120sp"
            android:backgroundTint="@color/ColMAIN"
            android:id="@+id/btn_answer4"
            />

    </LinearLayout>



</LinearLayout>
